completed mobile size layout, fixed alignment on Chromium

--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,13 @@ body {
 	text-align: center;
 }
 
+.form-group {
+	display:inline-block;
+}
+
 #Addbtn {
-	width:8rem;
+	width:10rem;
+	display:inline-block;
 }
 
 /* these are for the pre-bootstrap button */
@@ -83,8 +88,9 @@ body {
 }
 
 .edit_buttons {
-	width: 8rem;
-	padding:0.2rem;
+	width: 10rem;
+	padding:0;
+	display: inline-block;
 }
 
 .little_button {
@@ -147,7 +153,7 @@ body {
 	width: 80rem;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 768px) {
 	#bigworkspace {
 		display: none;
 	}
@@ -174,7 +180,11 @@ body {
 	display: none;
 }
 
-@media only screen and (max-width: 400px) {
+#small_item {
+	width: 30rem;
+}
+
+@media only screen and (max-width: 700px) {
 	#biglist {
 		display:none;
 	}
